Fix flickering of generated toc at fixed position when scrolling page vertically

--- a/src/sass/_analysisPage.scss
+++ b/src/sass/_analysisPage.scss
@@ -173,7 +173,7 @@
     border-radius: 5px;
     padding: 0.5rem;
     overflow-x: auto;
-    transition: top 0.3s ease;
+    transition: top 0.5s ease;
 
     &.toc-fix-top {
       position: fixed;
